--- a/submit.html
+++ b/submit.html
@@ -65,16 +65,19 @@
         }
       }
 
-      table { 
+      table {
+        width: 100%;
+        max-width: 560px;
+        table-layout: fixed;
         margin: auto;
-        border-collapse: collapse; 
+        border-collapse: collapse;
       }
       #calendarBody{
         background-color: #ffffff;
       }
       thead{
         background-color: #e4e0ca;
-        width: 80px;
+        width: 14.28%;
         height: 40px;
         border: 1px solid #ccc;
         vertical-align: top;
@@ -82,7 +85,7 @@
       }
       td {
         border: 1px solid #ccc;
-        width: 80px;
+        width: 14.28%;
         height: 60px;
         vertical-align: top;
         cursor: pointer;
