--- a/submit.html
+++ b/submit.html
@@ -38,6 +38,7 @@
         text-align: center; 
         margin: 40px;
         margin-top: 150px; 
+        overflow-x: hidden;
       }
 
       #namebox{
@@ -72,6 +73,7 @@
         margin: auto;
         border-collapse: collapse;
       }
+
       #calendarBody{
         background-color: #ffffff;
       }
