--- a/submit.html
+++ b/submit.html
@@ -65,6 +65,8 @@
         table-layout: fixed;
         margin: auto;
         border-collapse: collapse;
+        padding: 0 10px;
+        box-sizing: border-box;
       }
 
       #calendarBody{
