--- a/submit.html
+++ b/submit.html
@@ -38,7 +38,7 @@
         font-family: 'Noto Sans JP', sans-serif;
         text-align: center; 
         margin: 0;
-        padding: 0;
+        padding: 10px;
         margin-top: 150px; 
         overflow-x: hidden;
       }
@@ -65,8 +65,6 @@
         table-layout: fixed;
         margin: auto;
         border-collapse: collapse;
-        padding: 0 10px;
-        box-sizing: border-box;
       }
 
       #calendarBody{
