--- a/submit.html
+++ b/submit.html
@@ -38,7 +38,7 @@
         font-family: 'Noto Sans JP', sans-serif;
         text-align: center; 
         margin: 0;
-        padding: 10px;
+        padding: 50px;
         margin-top: 150px; 
         overflow-x: hidden;
       }
@@ -60,11 +60,12 @@
       }
 
       table {
-        width: 100%;
+        width: 95%;
         max-width: 560px;
         table-layout: fixed;
         margin: auto;
         border-collapse: collapse;
+        box-sizing: border-box;
       }
 
       #calendarBody{
