--- a/submit.html
+++ b/submit.html
@@ -136,7 +136,7 @@
         color: red;
       }
       #mail{
-        width: 300px;
+        width: 60%;
         padding: 5px 15px;
         font-size: 12px;
         border: 2px solid #ccc;
