--- a/admin.html
+++ b/admin.html
@@ -68,7 +68,7 @@
         min-width: calc(30px + 100px + 140px * 7); /* ✔ + 名前 + 7日 */
       }
 
-      th, td {
+      td {
         border: 1px solid #ccc;
         background-color: #fff;
         padding: 6px;
@@ -81,11 +81,25 @@
         max-width: 140px;
       }
 
+      th{
+        border: 1px solid #ccc;
+        background-color: #e4e0ca;
+        padding: 6px;
+        height: 25px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-align: center;
+        font-weight: 400;
+        min-width: 140px;
+        max-width: 140px;
+      }
+
+
       th:first-child, td:first-child {
         position: sticky;
         left: 0;
         z-index: 3;
-        background-color: #fff;
         width: 30px;
         min-width: 30px;
         max-width: 30px;
@@ -95,11 +109,12 @@
         position: sticky;
         left: 30px;
         z-index: 2;
-        background-color: #fff;
         width: 90px;
         min-width: 80px;
         max-width: 100px;
       }
+
+
 
       .note-table {
         width: 100%;
