--- a/submit.html
+++ b/submit.html
@@ -325,7 +325,8 @@
       }
       
       const month = document.getElementById("month");
-      month.textContent = `${current.getMonth()+1}月`;
+      month.textContent = `${start.getMonth()+1}月`;
+      console.log(current.getMonth());
     }
 
     function GetPeriod() {
